traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:7: error: not found: value getPos
      if (getPos()(1)==0) {
          ^TraversalDiagonal:12: error: not found: value getPos
        setPos(getPos()(0)+1,getPos()(1)-1)
               ^TraversalDiagonal:12: error: not found: value getPos
        setPos(getPos()(0)+1,getPos()(1)-1)
                             ^